# similar-tracks

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
backend/: config.py  deezer.py  lastfm.py  main.py  models.py  spotify.py
frontend/: app.js  index.html  style.css
